--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Portfólio - Aula 09</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
 <body>
+<!-- partial:index.partial.html -->
   <div class="container">
-    <header class="cabecalho">
+    <header class="cabecalho">  
+@@ -27,32 +17,17 @@ <h3>Estudante</h3>
       <div class="perfil">
         <img class="perfil-foto" src="https://github.com/KarinaBelch.png" />
         <div class="titulo">
@@ -97,3 +107,6 @@
     </main>
   </div>
 </body>
+ <!-- partial -->
+  <script  src="./script.js"></script>
+</html>
